# rkdevtool

./: .gitmodules  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
design/: penpot.manifest.json
design/components/: components.json
design/exports/: advanced-page.css  advanced-page.css.json  download-page.css  download-page.css.json  upgrade-page.css  upgrade-page.css.json
design/spec/: pages.json
design/tokens/: design-tokens.json  variables.css
packaging/linux/: 99-rkdevtool-rockchip.rules  deb-postinstall.sh  deb-postremove.sh  install-udev.sh
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: parse_firmware.rs
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/firmware/: extract.rs  info.rs  mod.rs
src-tauri/src/upgrade_tool/: runner.rs
src/api/: tool.ts
src/components/layout/: AppShell.vue  LogPanel.vue  PageHeader.vue  Sidebar.vue  StatusBar.vue
src/components/pages/: AdvancedPage.vue  DownloadPage.vue  UpgradePage.vue
src/components/ui/: AppButton.vue  BrowseButton.vue  PathField.vue
src/composables/: useAppState.ts  useDevicePoll.ts  useExtractPath.ts  useFilePicker.ts  useToolCommand.ts
src/constants/: advancedActions.ts  app.ts
src/i18n/: index.ts  logText.ts
src/i18n/messages/: en.ts  zh-CN.ts
src/styles/: global.css
src/types/: app.ts  tool.ts
